--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build"
   },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
