--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "render-build": "npm install && npm run build",
     "postinstall": "npm rebuild bcrypt"
   },
-  "engines": {
-    "node": ">=18.18.0 <19.0.0"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.9",
+    "@apollo/client": "^3.8.8",
+    "@apollo/server": "^4.9.5",
+    "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "graphql": "^16.8.1",
-    "mongodb": "^6.3.0"
+    "punycode": "^2.3.1",
+    "react-bootstrap": "^2.9.2",
+    "react-router-dom": "^6.21.1"
   }
 }
