--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@apollo/client": "^3.8.8",
     "@apollo/server": "^4.9.5",
     "apollo-server-express": "^3.13.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^5.1.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
