--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i && npm run build",
-    "build": "cd client && npm run build",
-    "render-build": "npm install && npm run build",
-    "postinstall": "npm rebuild bcrypt"
+    "build": "cd client && npm run build && npm rebuild bcrypt",
+    "render-build": "npm install && npm run build"
+  
   },
   "keywords": [],
   "author": "",
