--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "npm rebuild bcrypt && node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i && npm run build",
-    "build": "cd client && npm run build && npm rebuild bcrypt",
+    "build": "cd client && npm run build",
     "render-build": "npm install && npm run build"
   
   },
