--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "install": "cd server && npm i && cd ../client && npm i && npm run build",
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build"
-  
   },
   "keywords": [],
   "author": "",
@@ -30,6 +29,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "mongodb": "^6.3.0",
     "punycode": "^2.3.1",
     "react-bootstrap": "^2.9.2",
     "react-router-dom": "^6.21.1"
