--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && npm install mongodb && cd ../client && npm i && npm run build",
     "build": "cd client && npm run build",
-    "render-build": "npm install && npm run build",
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
