--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "concurrently": "^5.3.0"
   },
   "engines": {
-    "node": "18.17.1"
+    "node": ">=18.18.0 <19.0.0"
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
