--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+    "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i && npm run build",
     "render-build": "npm install && npm run build"
   },
