--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "googlebooks-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server/server.js",
-  "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-    "build": "cd client && npm run build",
-    "install": "cd server && npm i && cd ../client && npm i && npm run build",
-    "render-build": "npm install && npm run build"
+"version": "1.0.0",
+"description": "Google books app",
+"main": "server/server.js",
+"scripts": {
+"start": "node server/server.js",
+"develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+"install": "cd server && npm i && cd ../client && npm i --production=false",
+"build": "cd client && npm run build",
+"render-build":"npm install && npm run build"
   },
   "keywords": [],
   "author": "",
