added post install

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://rst1426:irC6YFHqOwJi5vpc@cluster0.5k55w.mongodb.net/Book-engine.book-engine?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://rst1426:irC6YFHqOwJi5vpc@cluster0.5k55w.mongodb.net/Book-engine?retryWrites=true&w=majority
