PLEASE FOR please just work

--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js",
-    "postinstall": "npm rebuild bcrypt --build-from-source"
+    "watch": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
