--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "install": "cd server && npm i && cd ../client && npm i --production=false",
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build",
-    "postinstall": "npm rebuild bcrypt",
+    "postinstall": "npm rebuild bcrypt --build-from-source",
     "seed": "node server/config/seeds.js"
   },
   "keywords": [],
