--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "install": "cd server && npm i && cd ../client && npm i --production=false",
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build",
-    "seed": "node server/config/seeds.js"
+    "seed": "node server/config/seeds.js",
+    "postinstall": "npm install bcrypt"
   },
   "keywords": [],
   "author": "",
