--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build",
     "seed": "node server/config/seeds.js",
-    "postinstall": "npm install bcrypt"
+    "postinstall": "npm rebuild bcrypt --build-from-source"
   },
   "keywords": [],
   "author": "",
